Added Validation, fix ui inconsistencies, and also fix ui/ux errors

--- a/etaas-user/app.json
+++ b/etaas-user/app.json
@@ -1,15 +1,16 @@
 {
   "expo": {
-    "name": "etaas-user",
+    "name": "ETAAS",
     "slug": "etaas-user",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "etaasuser",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.etaasuser"
     },
     "android": {
       "adaptiveIcon": {
@@ -19,7 +20,9 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.etaasuser",
+      "versionCode": 2
     },
     "web": {
       "output": "static",
@@ -31,12 +34,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/etaas.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#ec4899",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#ec4899"
           }
         }
       ],
@@ -45,6 +48,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "824b4320-2015-4360-947d-0a8fafaa6298"
+      }
     }
   }
 }
