--- a/etaas-user/package.json
+++ b/etaas-user/package.json
@@ -5,18 +5,19 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "54.0.21",
+    "expo": "54.0.22",
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -31,8 +32,8 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.8",
-    "firebase": "^12.4.0",
+    "expo-web-browser": "~15.0.9",
+    "firebase": "^12.5.0",
     "lucide-react": "^0.545.0",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
@@ -49,7 +50,6 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.18",
-    "undefined": "\\",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
