--- a/etaas-user/package.json
+++ b/etaas-user/package.json
@@ -18,22 +18,22 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
-    "expo": "54.0.22",
-    "expo-auth-session": "~7.0.8",
+    "expo": "~54.0.27",
+    "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-location": "~19.0.7",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
+    "expo-router": "~6.0.17",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^12.5.0",
     "lucide-react": "^0.545.0",
     "lucide-react-native": "^0.545.0",
@@ -44,6 +44,7 @@
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
