--- a/etaas-user/app.json
+++ b/etaas-user/app.json
@@ -30,7 +30,6 @@
         "ACCESS_FINE_LOCATION",
         "ACCESS_BACKGROUND_LOCATION"
       ],
-      
       "package": "com.dti.etaasuser",
       "versionCode": 2
     },
@@ -62,7 +61,8 @@
           "isAndroidBackgroundLocationEnabled": false,
           "isIosBackgroundLocationEnabled": false
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
